# mlpro-classification-bank-churn-2025

./: .gitignore  eda-synthese.pages  pyproject.toml  utils.py
eda/: eda.ipynb
modelisation/: modelisation.ipynb
