[tool.poetry]
name = "mlpro-classification-bank-churn-2025"
version = "0.1.0"
description = "L’objectif de ce projet est de prédire si un client va continuer à utiliser les services de la banque ou s’il va clôturer son compte (churn)"
authors = ["Laurent Bihin <laurent.bihin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
scipy = "^1.15.1"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
